# reconcilex

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  schedule.yaml  venues.yaml
data/: sample_confirmations.csv  sample_fix_messages.txt  sample_internal.csv
include/fix/: fix44.h
include/recon/: confirmation.h  exception.h  exception_workflow.h  fix_handler.h  matching_engine.h  reporting.h  settlement.h  trade_record.h  trade_store.h  types.h
python/: pyproject.toml
python/recon/: __init__.py  cli.py  config.py  importer.py  matching_logic.py  report_renderer.py  scheduler.py
python/recon/dashboard/: __init__.py  app.py  panels.py  websocket.py
python/tests/: test_cli.py  test_importer.py  test_scheduler.py
scripts/: build.sh  generate_report.py  run_tests.sh  seed_data.py  setup_python.sh
src/: exception_workflow.cpp  fix_handler.cpp  main.cpp  matching_engine.cpp  reporting.cpp  settlement.cpp  trade_store.cpp
templates/: daily_report.html.j2  exception_aging.html.j2  settlement_summary.html.j2
test/: CMakeLists.txt  test_exception_workflow.cpp  test_fix_handler.cpp  test_fuzz.cpp  test_integration.cpp  test_matching_engine.cpp  test_reporting.cpp  test_settlement.cpp  test_trade_store.cpp
