[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reconcilex"
version = "1.0.0"
description = "Post-Trade Reconciliation & Settlement Engine"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "plotly>=5.18",
    "dash>=2.14",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "weasyprint>=60.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-cov>=4.1"]

[project.scripts]
reconcilex = "recon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
